new layout updates and translations

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,8 @@
 {
   "welcome": "Welcome",
-  "description": "This is a basic example."
+  "description": "This is a basic example.",
+
+  "core": {
+    "themeSwitch": "change color theme"
+  }
 }
