--- a/public/locales/sr/translation.json
+++ b/public/locales/sr/translation.json
@@ -1,4 +1,7 @@
 {
   "welcome": "Dobrodošli",
-  "description": "Ovo je osnovni primer."
+  "description": "Ovo je osnovni primer.",
+  "core": {
+    "themeSwitch": "Promeni boju"
+  }
 }
