--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,12 +14,38 @@
     "cancelBtn": "Cancel",
     "searchBtn": "Search",
     "saveBtn": "Save",
+    "addNew": "Add New",
+    "tableHeading": "Your Meal Plans",
+    "actions": "Actions",
+    "links": "Links",
     "minProtein": "Min. Protein",
     "maxProtein": "Max. Protein",
     "minCarbs": "Min. Carbs",
     "maxCarbs": "Max. Carbs",
     "requiredField": "Required field!",
     "greaterThenZero": "Value must be greater than 0.",
-    "nubmerOnly": "This input is number only."
+    "nubmerOnly": "This input is number only.",
+    "spoonacularTitle": "Spoonacular Recepies",
+
+    "spoonacularDescrition": "Search for the recepies, using Spoonacular API ( *values are presented in grams).",
+    "customTitle": "Create Yours",
+    "customDescrition": "Create your own, note that all fields are requried.",
+    "spoonacularBtn": "Spoonacular",
+    "customBtn": "Custom",
+    "title": "Title",
+    "sourceUrl": "Source URL",
+    "notVeget": "Not Vegetarian",
+    "notVegan": "Not Vegan",
+    "notGlutenFree": "Not Gluten Free",
+    "notDiaryFree": "Not Diary Free",
+    "veget": "Vegetarian",
+    "vegan": "Vegan",
+    "glutenFree": "Gluten Free",
+    "diaryFree": "Diary Free",
+    "carbs": "Carbs",
+    "protein": "Protein",
+    "fat": "Fat",
+    "calories": "Calories",
+    "visitWebste": "Visit Website"
   }
 }
