--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -74,5 +74,9 @@
     "descrition": "Create your own excercise, note that all fields are requried.",
     "saveBtn": "Save",
     "cancelBtn": "Cancel"
+  },
+
+  "errors": {
+    "unauthorized": "Please login first!"
   }
 }
